# stocks_analyzer

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  dependencies.py  main.py
app/api/v1/: chat.py  funds.py  stocks.py
app/crew/: __init__.py  agents.py  output_models.py  tasks.py
app/crew/tools/: __init__.py  financial_data.py  market_research.py  sector_analysis.py
app/models/: __init__.py  requests.py  responses.py
app/services/: __init__.py  crew_service.py  intent_classifier.py  job_store.py  recommendations_service.py
app/utils/: exceptions.py  logger.py  validators.py
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/crew/: agents.py  crew.py  output_models.py  tasks.py
backend/app/models/: requests.py  responses.py
backend/app/services/: cache.py  chat_service.py  crew_runner.py  crew_service.py  data_fetchers.py  (+3 more)
backend/tests/: conftest.py  test_chat.py  test_chat_service.py  test_crew_runner.py  test_crew_service.py  test_data_fetchers.py  test_funds.py  test_health.py  test_recommendations_service.py
docs/plan/: backend_improvement_plan.md  parallel_hierarchical_recommendations_plan.md
frontend/: package-lock.json  package.json
frontend/src/: providers.tsx
tests/: test_chat.py  test_chat_service.py  test_crew_service.py  test_funds.py  test_intent_classifier.py  test_job_store.py  test_output_models.py  test_recommendations_service.py  test_stocks.py
(+34 files in other folders)
